--- a/projet/templates/tests/css/style.css
+++ b/projet/templates/tests/css/style.css
@@ -52,14 +52,14 @@
 /*================= TEXT =================*/
 /*========================================*/
 body {
-  color: #444;
+  color: #216C64;
   font-family: 'Comfortaa', sans-serif;
   font-weight: 400;
   font-size: 15px;
   line-height: 1.4;
 }
 a {
-  color: #ec254e;
+  color: #216C64;
   text-decoration: none;
   -webkit-transition: all 0.15s linear;
   -moz-transition: all 0.15s linear;
@@ -69,7 +69,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-  color: #444;
+  color: #14413C;
   text-decoration: none;
 }
 strong,
@@ -195,7 +195,7 @@ ol {
   font-size: 15px;
   line-height: 1.2;
   font-weight: 700;
-  padding: 8px 16px;
+  padding: 14px 30px;
   border-width: 1px;
   border-radius: 4px;
   -webkit-transition: all 0.15s linear;
@@ -217,7 +217,7 @@ ol {
   padding: 10px 20px;
 }
 .btn-default {
-  color: #444;
+  color: #216C64;
   background-color: #fafafa;
   border-color: #e6e6e6;
 }
@@ -227,9 +227,9 @@ ol {
 .btn-default.hover,
 .btn-default:active,
 .btn-default.active {
-  color: #444;
+  color: #fafafa;
   background-color: #e6e6e6;
-  border-color: #c7c7c7;
+  border-color: #e6e6e6;
 }
 .btn-default.disabled:hover,
 .btn-default[disabled]:hover,
@@ -247,12 +247,12 @@ fieldset[disabled] .btn-default.focus {
 .btn-default[disabled] .badge,
 fieldset[disabled] .btn-default .badge {
   color: #fafafa;
-  background-color: #444;
+  background-color: #216C64;
 }
 .btn-primary {
-  color: white;
-  background-color: #ec254e;
-  border-color: #cc1238;
+  color: #216C64;
+  background-color: white;
+  border-color: #216C64;
 }
 .btn-primary:focus,
 .btn-primary.focus,
@@ -261,8 +261,8 @@ fieldset[disabled] .btn-default .badge {
 .btn-primary:active,
 .btn-primary.active {
   color: white;
-  background-color: #d6133b;
-  border-color: #940d29;
+  background-color: #216C64;
+  border-color: #216C64;
 }
 .btn-primary.disabled:hover,
 .btn-primary[disabled]:hover,
@@ -273,19 +273,19 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #ec254e;
-  border-color: #cc1238;
+  background-color: white;
+  border-color: #216C64;
 }
 .btn-primary.disabled .badge,
 .btn-primary[disabled] .badge,
 fieldset[disabled] .btn-primary .badge {
-  color: #ec254e;
-  background-color: white;
+  color: white;
+  background-color: #216C64;
 }
 .btn-secondary {
   color: white;
-  background-color: #444;
-  border-color: #2b2b2b;
+  background-color: #14413C;
+  border-color: #081a18;
 }
 .btn-secondary:focus,
 .btn-secondary.focus,
@@ -293,9 +293,9 @@ fieldset[disabled] .btn-primary .badge {
 .btn-secondary.hover,
 .btn-secondary:active,
 .btn-secondary.active {
-  color: white;
-  background-color: #303030;
-  border-color: #0c0c0c;
+  color: #14413C;
+  background-color: #081a18;
+  border-color: #081a18;
 }
 .btn-secondary.disabled:hover,
 .btn-secondary[disabled]:hover,
@@ -306,13 +306,13 @@ fieldset[disabled] .btn-secondary:focus,
 .btn-secondary.disabled.focus,
 .btn-secondary[disabled].focus,
 fieldset[disabled] .btn-secondary.focus {
-  background-color: #444;
-  border-color: #2b2b2b;
+  background-color: #14413C;
+  border-color: #081a18;
 }
 .btn-secondary.disabled .badge,
 .btn-secondary[disabled] .badge,
 fieldset[disabled] .btn-secondary .badge {
-  color: #444;
+  color: #14413C;
   background-color: white;
 }
 /* Images */
@@ -430,22 +430,36 @@ html body {
 /*========================================*/
 #header {
   position: fixed;
-  background: rgba(255, 255, 255, 0.95);
+  background: white;
   top: 0;
   left: 0;
   right: 0;
   z-index: 100;
-  height: 80px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0);
+  height: 90px;
   -webkit-transition: all 0.15s linear;
   -moz-transition: all 0.15s linear;
   -o-transition: all 0.15s linear;
   transition: all 0.15s linear;
 }
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  #header {
+    height: 130px;
+  }
+}
+.scrolled #header {
+  height: 60px;
+  box-shadow: 0 8px 4px -4px rgba(0, 0, 0, 0.25);
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  .scrolled #header {
+    height: 90px;
+    box-shadow: none;
+  }
+}
 /* Logo */
 #logo {
   max-width: 100%;
-  max-height: 80px;
+  max-height: calc(130px - 40px);
   padding: 10px 60px 10px 0;
   -webkit-transition: all 0.15s linear;
   -moz-transition: all 0.15s linear;
@@ -454,31 +468,40 @@ html body {
 }
 #logo a,
 #logo img {
-  display: block;
+  display: inline-block;
   max-width: 100%;
-  max-height: 60px;
+  height: calc(130px - 60px);
   -webkit-transition: all 0.15s linear;
   -moz-transition: all 0.15s linear;
   -o-transition: all 0.15s linear;
   transition: all 0.15s linear;
+  float: left;
+}
+#logo span {
+  padding: 17px 0 0 85px;
+  display: block;
+  font-size: 30px;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+.scrolled #logo {
+  max-height: calc(90px - 60px);
+}
+.scrolled #logo a,
+.scrolled #logo img {
+  height: 40px;
+}
+.scrolled #logo span {
+  padding: 8px 0 0 55px;
+  font-size: 21px;
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
   #logo {
     position: absolute;
     padding-right: 0;
   }
-}
-.scrolled #header {
-  height: 60px;
-  background: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.scrolled #logo {
-  max-height: 60px;
-}
-.scrolled #logo a,
-.scrolled #logo img {
-  max-height: 40px;
 }
 /*========================================*/
 /*============== NAVIGATION ==============*/
@@ -519,6 +542,15 @@ html body {
     z-index: 90;
   }
 }
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  #navigation {
+    padding-top: calc(130px - 40px);
+  }
+  .scrolled #navigation {
+    padding-top: calc(90px - 30px);
+    box-shadow: 0 8px 4px -4px rgba(0, 0, 0, 0.25);
+  }
+}
 /*========================================*/
 /*============ TOGGLE BUTTON =============*/
 /*========================================*/
@@ -529,7 +561,7 @@ html body {
   height: 40px;
   width: 40px;
   border-radius: 4px;
-  background: rgba(236, 37, 78, 0.05);
+  background: rgba(33, 108, 100, 0.05);
   position: fixed;
   top: 20px;
   right: 20px;
@@ -551,7 +583,7 @@ html body {
 #navigation-toggle span:after {
   display: block;
   content: "";
-  background: #ec254e;
+  background: #216C64;
   height: 2px;
   position: absolute;
   -webkit-transition: all 0.15s linear;
@@ -568,15 +600,15 @@ html body {
   bottom: -8px;
 }
 #navigation-toggle:hover {
-  background: rgba(236, 37, 78, 0.2);
+  background: rgba(33, 108, 100, 0.2);
 }
 #navigation-toggle:hover span,
 #navigation-toggle:hover span:before,
 #navigation-toggle:hover span:after {
-  background: #444;
+  background: #14413C;
 }
 .shownav #navigation-toggle {
-  background: #ec254e;
+  background: #216C64;
 }
 .shownav #navigation-toggle span {
   background: transparent;
@@ -619,7 +651,7 @@ html body {
   list-style: none;
 }
 #nav ul li:not(:first-child) {
-  border-top: 1px solid rgba(236, 37, 78, 0.1);
+  border-top: 1px solid rgba(33, 108, 100, 0.1);
 }
 #nav ul li a {
   display: block;
@@ -630,23 +662,30 @@ html body {
 #nav ul li a:hover,
 #nav ul li a:active,
 #nav ul li a:focus {
-  color: #444;
+  color: #14413C;
 }
 #nav ul li.active a,
 #nav ul li.selected a {
   color: white;
-  background: #ec254e;
+  background: #216C64;
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
   #nav {
-    padding-top: 80px;
     display: flex;
+    justify-content: space-between;
+    border-radius: 4px 4px 0 0;
+    background-color: #216C64;
+    height: 40px;
+    margin: 0 -20px;
   }
   #nav ul {
     display: flex;
   }
   #nav ul.navigation-left {
     flex-direction: row;
+  }
+  #nav ul.navigation-left a {
+    min-width: 150px;
   }
   #nav ul.navigation-right {
     flex-direction: row-reverse;
@@ -655,8 +694,38 @@ html body {
     display: inline-block;
     border: none;
   }
+  #nav ul > li a {
+    color: white;
+  }
+  #nav .new-entry {
+    display: block;
+    border-radius: 50%;
+    background-color: white;
+    border: 2px solid #14413C;
+    height: 66px;
+    width: 66px;
+    line-height: 20px;
+    font-size: 20px !important;
+    padding: 23px 0 !important;
+    text-align: center;
+    color: #14413C;
+    margin: -13px 70px 0 0;
+  }
+  #nav .new-entry:hover,
+  #nav .new-entry:active,
+  #nav .new-entry:focus {
+    background-color: #14413C;
+    color: white;
+  }
+  .scrolled #nav .new-entry {
+    margin: -18px 70px 0 0;
+  }
+  .scrolled #nav {
+    height: 30px;
+  }
   .scrolled #nav ul > li a {
-    padding: 20px;
+    font-size: 15px;
+    padding: 5px 20px;
   }
 }
 /*========================================*/
@@ -664,9 +733,9 @@ html body {
 /*========================================*/
 #subnav-toggle {
   display: block;
-  color: #ec254e;
+  color: #216C64;
   font-size: 1.2em;
-  background: rgba(236, 37, 78, 0.05);
+  background: rgba(33, 108, 100, 0.05);
   line-height: 20px;
   padding: 10px 60px 10px 10px;
   cursor: pointer;
@@ -685,7 +754,7 @@ html body {
   width: 16px;
   position: absolute;
   top: 20px;
-  background: #ec254e;
+  background: #216C64;
   -webkit-transition: all 0.15s linear;
   -moz-transition: all 0.15s linear;
   -o-transition: all 0.15s linear;
@@ -708,16 +777,16 @@ html body {
   transform: rotate(-45deg);
 }
 #subnav-toggle:hover {
-  color: #444;
-  background: rgba(236, 37, 78, 0.2);
+  color: #14413C;
+  background: rgba(33, 108, 100, 0.2);
 }
 #subnav-toggle:hover:before,
 #subnav-toggle:hover:after {
-  background: #444;
+  background: #14413C;
 }
 .showsubnav #subnav-toggle {
   color: white;
-  background: #ec254e;
+  background: #216C64;
 }
 .showsubnav #subnav-toggle:before,
 .showsubnav #subnav-toggle:after {
@@ -739,7 +808,7 @@ html body {
   padding: 0 10px;
   border-radius: 4px;
   overflow: hidden;
-  background: rgba(236, 37, 78, 0.05);
+  background: rgba(33, 108, 100, 0.05);
 }
 #subnav > ul {
   max-height: 0;
@@ -767,7 +836,7 @@ html body {
   font-weight: bold;
 }
 #subnav > ul > li {
-  border-top: solid 1px rgba(236, 37, 78, 0.1);
+  border-top: solid 1px rgba(33, 108, 100, 0.1);
 }
 #subnav > ul > li:first-child {
   border-top: none;
@@ -806,46 +875,64 @@ html body {
 /*========================================*/
 /*=============== CONTENT ================*/
 /*=======================================*/
+.main-container {
+  margin: calc(90px + 10px) 5px 0 5px;
+  border: 2px solid #216C64;
+  border-radius: 4px;
+  width: calc(100% - 10px);
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  .main-container {
+    margin-top: calc(130px - 30px);
+    border-top: none;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+}
 .main {
-  margin-top: calc(80px + 90px);
+  padding-top: calc(90px + 30px);
+  padding-bottom: 90px;
+}
+/*========================================*/
+/*============ NOTIFICATIONS =============*/
+/*========================================*/
+.notifications ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+/*========================================*/
+/*================ ASIDES ================*/
+/*========================================*/
+#aside-right {
+  display: none;
+}
+#aside-right ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+#aside-right ul li {
+  margin-bottom: 15px;
+}
+#aside-right ul li a {
+  display: block;
+  text-align: left;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  #aside-right {
+    display: block;
+  }
 }
 /*========================================*/
 /*================ FOOTER ================*/
 /*========================================*/
 #footer {
-  color: rgba(255, 255, 255, 0.5);
   text-align: center;
   font-size: 12px;
-  line-height: 1.2;
-  background-color: #222222;
-  padding: 20px 0 0 0;
-}
-#footer a {
-  color: inherit;
-}
-#footer a:hover,
-#footer a:active,
-#footer a:focus {
-  color: #ec254e;
-}
-#footer .address {
-  line-height: inherit;
-  margin-bottom: 20px;
-}
-#footer .address span {
-  display: block;
-}
-#footer .copyright {
-  line-height: inherit;
-  background-color: #000;
-  text-align: center;
-  margin-top: 20px;
-  padding: 10px 0;
+  padding: 20px 0;
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
-  #footer {
-    text-align: left;
-  }
   #footer .address {
     margin-bottom: 0;
   }
