--- a/projet/templates/tests/template1.html
+++ b/projet/templates/tests/template1.html
@@ -25,9 +25,10 @@
         <div class="container">
             <div id="logo">
                 <a href="/">
-                    <img src="/custom/images/header-logo.png" alt="logo" />
-                    <span>WD LOG - Eco Logis</span>
+                    <img src="img/logo.svg" alt="logo" />
+
                 </a>
+                <span>WD LOG - Eco Logis</span>
             </div>
             <div id="navigation-toggle"><span></span></div>
             <div id="navigation">
@@ -40,9 +41,9 @@
                         <li><a title="Matériaux" href="/Matériaux/">Matériaux</a></li>
                     </ul>
                     <ul class="navigation-right">
-                        <li><a title="new-entry" href="/new-entry/">new-entry</a></li>
-                        <li><a title="notification" href="/notification/">notification</a></li>
-                        <li><a title="param" href="/param/">param</a></li>
+                        <li><a class ="new-entry" title="new-entry" href="/new-entry/">N</a></li>
+                        <li><a title="notification" href="/notification/">n</a></li>
+                        <li><a title="param" href="/param/">p</a></li>
 
                     </ul>
                 </nav>
@@ -50,28 +51,41 @@
         </div>
     </header>
 
-    <div class="main">
-        <div class="container">
-            <div class="row">
-                <aside id="aside-left" class="col-md-3">
+    <div class="main-container container">
+        <div class="main">
+                <div class="row">
+                    <aside id="aside-left" class="col-md-3">
 
-                </aside>
-                <div id="content" class="col-md-6">
-                    <section>
-                        <h1>
-                            Home
-                        </h1>
-                        <div>
-                            <div>
-                                <p>Maecenas id consequat felis. Sed non neque vel sapien rutrum lobortis at viverra erat. Nullam non varius nisl. Ut non nibh elit. Morbi fermentum pharetra pulvinar. Etiam sagittis leo libero, varius convallis augue fringilla non. Sed porttitor tincidunt faucibus. Nullam sodales tincidunt urna, eget gravida dolor semper sed. In porta mauris vel tempor scelerisque.</p>
+                    </aside>
+                    <div id="content" class="col-md-6">
+                        <section>
+                            <h1>
+                                Bienvenue Bob
+                            </h1>
+                            <div class="notifications">
+                                <h3>Vous avez 3 notifications</h3>
+                                <ul>
+                                    <li>LAX - 08/10/2018 à été validé sans modification par GLE-Gilbert</li>
+                                    <li>BMA - 07/10/2018 à été validé après modifications par GLE-Gilbert</li>
+                                    <li>Kris Kristofson à indiquer que vous aviez travaillé le 06/10/2018 à AAT</li>
+                                </ul>
+                                <a class="btn btn-primary" href="notifications">Toutes les notifications</a>
                             </div>
-                        </div>
-                    </section>
-                </div>
-                <aside id="aside-right" class="col-md-3">
-                </aside>
+                        </section>
+                    </div>
+                    <aside id="aside-right" class="col-md-3">
+                        <h2>Accès rapides</h2>
+                        <ul>
+                            <li><a class="btn btn-primary" href="new_entry">nouvelle entrée</a></li>
+                            <li><a class="btn btn-primary" href="new_person">nouvelle personne</a></li>
+                            <li><a class="btn btn-primary" href="new_site">nouveau chantier</a></li>
+                            <li><a class="btn btn-primary" href="map">voir la carte</a></li>
+                        </ul>
+                    </aside>
 
+                </div>
             </div>
+
         </div>
 
     </div>
