--- a/projet/templates/tests/template1.html
+++ b/projet/templates/tests/template1.html
@@ -54,10 +54,10 @@
     <div class="main-container container">
         <div class="main">
                 <div class="row">
-                    <aside id="aside-left" class="col-md-3">
+                    <aside id="aside-left" class="col-sm-12 col-md-3">
 
                     </aside>
-                    <div id="content" class="col-md-6">
+                    <div id="content" class="col-sm-12 col-md-9 col-lg-6">
                         <section>
                             <h1>
                                 Bienvenue Bob
@@ -73,8 +73,8 @@
                             </div>
                         </section>
                     </div>
-                    <aside id="aside-right" class="col-md-3">
-                        <h2>Accès rapides</h2>
+                    <aside id="aside-right" class="col-lg-3">
+                        <h3>Accès rapides</h3>
                         <ul>
                             <li><a class="btn btn-primary" href="new_entry">nouvelle entrée</a></li>
                             <li><a class="btn btn-primary" href="new_person">nouvelle personne</a></li>
