--- a/projet/templates/base.html.twig
+++ b/projet/templates/base.html.twig
@@ -16,7 +16,7 @@
 <header id="header">
     <div class="container">
         <div id="logo">
-            <a href="/">
+            <a href="{{ path('home') }}">
                 <img src="img/logo.svg" alt="logo" />
             </a>
             <span>WD LOG - {{ company_name }}</span>
