--- a/projet/templates/home.html.twig
+++ b/projet/templates/home.html.twig
@@ -10,11 +10,13 @@
 
 {% block content %}
     <section>
-        <h1>
-            {% trans %}Bienvenue %app.user% {% endtrans %}
-        </h1>
+        <h2>
+            {% set username = app.user.firstname %}
+            {% trans %}Bienvenue %username% {% endtrans %}
+        </h2>
         <div class="notifications">
             <h3>
+                {% set count = notifications|length %}
             {% transchoice count %}
                 {0} Vous n'avez pas de notification|{1} Vous avez une notifications|]1,Inf[ Vous avez %count% notifications
             {% endtranschoice %}
