--- a/projet/templates/lib/quick_access.html.twig
+++ b/projet/templates/lib/quick_access.html.twig
@@ -2,4 +2,5 @@
 <ul>
     {% for link in quickaccess %}
     <li><a class="btn btn-primary" href="{{ link.route }}">{{ link.name }}</a></li>
+    {% endfor %}
 </ul>
