--- a/projet/templates/site/site_all.html.twig
+++ b/projet/templates/site/site_all.html.twig
@@ -2,41 +2,14 @@
 
 {% block title %}TEST{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-<nav>
-/!\ASK HOW TO MAKE MENU/!\
-    {#<ul>#}
-        {#<li>#}
-            {#<a href="{% path('home') %}">HOME</a>#}
-        {#</li>#}
-        {#<li>#}
-            {#<a href="{% path('site') %}">CHANTIER</a>#}
-        {#</li>#}
-        {#<li>#}
-            {#<a href="{% path('history') %}">HISTORIQUE</a>#}
-        {#</li>#}
-        {#<li>#}
-            {#<a href="{% path('person') %}">PERSONNES</a>#}
-        {#</li>#}
-        {#<li>#}
-            {#<a href="{% path('param') %}">PARAMETRES</a>#}
-        {#</li>#}
-        {#<li>#}
-            {#<a href="{% path('notifications') %}">NOTIFICATIONS</a>#}
-        {#</li>#}
-        {#<div>SEARCHBAR</div>#}
-    {#</ul>#}
-    {{ form_start(form) }}
-        {{ form_rest(form) }}
-    {{ form_end(form) }}
-</nav>
-<div class="example-wrapper">
+{% block content %}
+
+<section>
+    <div>Map</div>
+</section>
+<section>
     <h1>SITES  ✅</h1>
-    <h2>Map</h2>
+
     <div>
         {% for site in sites %}
         <span><strong>{{ site.shortName }} : </strong>{{ site.latitude }} - {{ site.longitude }}</span>
@@ -80,7 +53,6 @@
         <hr>
 
     {% endfor %}
-    {{ dump(sites) }}
 
-    </div>
+</section>
 {% endblock %}
