--- a/projet/templates/lib/menu.html.twig
+++ b/projet/templates/lib/menu.html.twig
@@ -1,14 +1,29 @@
-<nav id="nav">
-    <ul class="navigation-left">
-        <li><a href="/Historique/">{% trans %}Historique{% endtrans %}</a></li>
-        <li><a href="{{ path('site') }}">{% trans %}Chantier{% endtrans %}</a></li>
-        <li><a href="/Personnes/">{% trans %}Personnes{% endtrans %}</a></li>
-        <li><a href="/Matériaux/">{% trans %}Matériaux{% endtrans %}</a></li>
-    </ul>
-    <ul class="navigation-right">
-        <li><a class ="new-entry" href="/new-entry/">N</a></li>
-        <li><a href="/notification/">n</a></li>
-        <li><a href="/param/">p</a></li>
+<div id="login-menu">
+    {% if app.user %}
+        <a href="/profil/">{{ app.user }}</a> -
+        <a class="login-btn" href="{{ path('logout') }}">{% trans %}Déconnexion{% endtrans %}</a>
+    {% else %}
+        <a class="login-btn" href="{{ path('login') }}">{% trans %}Connexion{% endtrans %}</a>
+    {% endif %}
+</div>
 
-    </ul>
+<nav id="nav">
+    {% if app.user %}
+        <ul class="navigation-left">
+            <li><a href="/Historique/">{% trans %}Historique{% endtrans %}</a></li>
+            <li><a href="{{ path('site') }}">{% trans %}Chantier{% endtrans %}</a></li>
+            <li><a href="/Personnes/">{% trans %}Personnes{% endtrans %}</a></li>
+            <li><a href="/Matériaux/">{% trans %}Matériaux{% endtrans %}</a></li>
+        </ul>
+        <ul class="navigation-right">
+            <li><a class ="new-entry" href="/new-entry/">N</a></li>
+            <li><a href="/notification/">n</a></li>
+            <li><a href="/param/">p</a></li>
+
+        </ul>
+    {% else %}
+        <ul class="navigation-left">
+            <li><a href="/About/">{% trans %}À Propos{% endtrans %}</a></li>
+        </ul>
+    {% endif %}
 </nav>
