--- a/projet/templates/base.html.twig
+++ b/projet/templates/base.html.twig
@@ -21,7 +21,7 @@
     <div class="container">
         <div id="logo">
             <a href="{{ path('home') }}">
-                <img src="img/logo.svg" alt="logo" />
+                <img src="{{ asset('img/logo.svg') }}" alt="logo" />
             </a>
             <span>WD LOG - {{ company_name }}</span>
         </div>
