--- a/projet/templates/lib/js.html.twig
+++ b/projet/templates/lib/js.html.twig
@@ -4,5 +4,6 @@
         integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
         crossorigin="anonymous">
 </script>
-<script src="js/script.js"></script>
+<script src="{{ asset('js/script.js') }}"></script>
+
 {% endblock %}
