--- a/projet/templates/lib/menu.html.twig
+++ b/projet/templates/lib/menu.html.twig
@@ -10,7 +10,7 @@
 <nav id="nav">
     {% if app.user %}
         <ul class="navigation-left">
-            <li><a href="/Historique/">{% trans %}Historique{% endtrans %}</a></li>
+            <li><a href="{{ path('workday') }}">{% trans %}Historique{% endtrans %}</a></li>
             <li><a href="{{ path('site') }}">{% trans %}Chantier{% endtrans %}</a></li>
             <li><a href="/Personnes/">{% trans %}Personnes{% endtrans %}</a></li>
             <li><a href="/Matériaux/">{% trans %}Matériaux{% endtrans %}</a></li>
