--- a/projet/templates/site/site_all.html.twig
+++ b/projet/templates/site/site_all.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}TEST{% endblock %}
 {% block aside_left %}
-    {{ form_start(form, {'action': path('search'), 'method': 'GET'}) }}
+    {{ form_start(form, {'action': path('site-search'), 'method': 'GET'}) }}
     {{ form_rest(form) }}
     {{ form_end(form) }}
 {% endblock %}
