--- a/projet/templates/lib/menu.html.twig
+++ b/projet/templates/lib/menu.html.twig
@@ -12,7 +12,7 @@
         <ul class="navigation-left">
             <li><a href="{{ path('workday') }}">{% trans %}Historique{% endtrans %}</a></li>
             <li><a href="{{ path('site') }}">{% trans %}Chantier{% endtrans %}</a></li>
-            <li><a href="/Personnes/">{% trans %}Personnes{% endtrans %}</a></li>
+            <li><a href="{{ path('person') }}">{% trans %}Personnes{% endtrans %}</a></li>
             <li><a href="/Matériaux/">{% trans %}Matériaux{% endtrans %}</a></li>
         </ul>
         <ul class="navigation-right">
